# SDL-2d-roguelike

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: blank.yml
src/: CMakeLists.txt  main.cpp
src/game/: GameLoop.cpp  GameLoop.hpp
src/graphics/: TextureManager.cpp  TextureManager.hpp
src/utils/: RendererRaiiWrapper.cpp  RendererRaiiWrapper.hpp  WindowRaiiWrapper.cpp  WindowRaiiWrapper.hpp
